# Regression

./: CMakeLists.txt  README.txt
Output/: plotScript.txt
Source/: dataset.cpp  dataset.h  linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  main.cpp  regression.cpp  regression.h
